# sdl_nyan

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  nyan_data_r.c  nyan_types.h  sdl_nyan.cc  sdl_nyan.h  sdl_nyan_demo.cc
